updates for UI integration
